# libqm

./: .gitignore  CMakeLists.txt  LICENSE  libqm.pc.in
include/: libqm.h
src/: qm.c
tests/: CMakeLists.txt  basics.c
